# ImpressiveUpdaterX

./: .gitignore  CMakeLists.txt  Impressive Updater X Solution.sln  ImpressiveUpdaterX.cc  ImpressiveUpdaterX.hh  ImpressiveUpdaterX.vcxproj  ImpressiveUpdaterX.vcxproj.filters  LauncherConfig.h  README.md  packages.config  updateVersion.txt  version.txt  zip.h
